--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
-  background-color: aqua;
+  background-color: var(--background-color);
 }
