--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,4 +3,5 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   background-color: var(--background-color);
+  font-family: 'Inter var', Arial, Helvetica, sans-serif;
 }
