style: basic layout

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,17 @@
-#main {
+.app-container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+.app-header {
+  flex-shrink: 0;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
   align-items: center;
+}
+
+.app-main {
+  flex-grow: 1;
 }
