--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,12 +9,15 @@
 }
 
 .logo-container {
-  padding: 1rem 10rem 1rem 2rem;
+  position: relative;
+  padding: 1rem 12rem 1rem 2rem;
   background-position: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  height: 4.22rem;
+  overflow: hidden;
 }
 
 .logo-text {
@@ -25,6 +28,9 @@
 }
 
 .logo-image {
-  width: 4rem;
-  height: 4.72rem;
+  left: 0;
+  transform: translate(-50%, 0);
+  position: absolute;
+  width: 10rem;
+  height: 11.8rem;
 }
